--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Test</h1>
+<!DOCTYPE>
+<html>
+    <header>
+        <title>FOTO-MOTO</title>
+    </header>
+    <body>
+        <h1>This is a Test Site</h1>
+    </body>
+</html>
