--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE>
 <html>
-    <header>
+    <head>
         <title>FOTO-MOTO</title>
-    </header>
+        <script src="//code-eu1.jivosite.com/widget/4Q3dnrhHFv" async></script>
+    </head>
     <body>
         <h1>This is a Test Site</h1>
     </body>
