--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>FOTO-MOTO</title>
-        <script src="https://codealluring.github.io/Foto/chat.js" async></script>
+        <script src="//code-eu1.jivosite.com/widget/4Q3dnrhHFv" async></script>
     </head>
     <body>
         <h1>This is a Test Site</h1>
