--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <script src="//code-eu1.jivosite.com/widget/4Q3dnrhHFv" async></script>
     </head>
     <body>
-        <h1>This is a Test Site</h1>
+        <h1>This is a Test Site. Tayyorgarlik bo'layapti hapalashmangiz!</h1>
     </body>
 </html>
